--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
         <div class="flex flex-col">
           <div class="flex flex-col  md:justify-between">
             <div class="flex justify-center">
-              <img class="h-[250px] w-[250px] md:h-[600px] md:w-[600px] mt-[150px] md:mt-[0] animate-bounce md:animate-none md:mr-[-800px]" src="./assets/image1.png" alt="">
+              <img class="h-[250px] w-[250px] md:h-[500px] md:w-[500px] mt-[150px] md:mt-[0] animate-bounce md:animate-none md:mr-[-800px]" src="./assets/image1.png" alt="">
             </div>             
-              <img class="hidden md:block w-[650px] h-[500px] mt-[-580px] ml-[300px]" src="./assets/word2.png" alt="">
+              <img class="hidden md:block w-[550px] h-[400px] mt-[-450px] ml-[300px]" src="./assets/word2.png" alt="">
             <div class="flex justify-center md:hidden">
               <img class="h-[200px] md:hidden" src="./assets/word3.png" alt="">
             </div>
-            <div class="flex justify-center mt-4 md:ml-[-1180px]">
+            <div class="flex justify-center mt-4 md:ml-[-750px]">
               <button type="button" class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Contact Me</button>
               <button class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800">
               <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
@@ -102,7 +102,7 @@
             </div>  
           </div>
           <div>
-            <img class="mt-[170px] md:mt-8 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
+            <img class="mt-[170px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
           </div>
         </div>
     </div>      
@@ -128,7 +128,7 @@
           <p>If you want to be a patner, please fill this form :</p>
         </div>
         <div class="flex justify-center items-center">
-            <div class="w-[50%] md:ml-[190px]">
+            <div class="w-[50%] md:ml-[50px]">
                 <form action="" class="font-['poppins'] text-[#BF56D8] font-extrabold md:text-xl" >Nama :</form>
                 <input type="text" class="md:w-[803px] rounded-lg">
                 <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3">Email :</form>
@@ -136,7 +136,7 @@
                 <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3 hidden md:block">Message :</form>
                 <textarea name="" id="" cols="105" rows="10" class="rounded-lg hidden md:block"></textarea>
                 <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3 md:hidden">Message :</form>
-                <textarea name="" id="" cols="24" rows="10" class="rounded-lg md:hidden"></textarea>
+                <textarea name="" id="" cols="24" rows="10" class="rounded-lg md:hidden md:w-[803px]"></textarea>
                 <button type="button" class=" mt-2 text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm  px-5 py-2.5 text-center  mb-4">Learn More..</button>
              </div>
         </div>      
