--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>  
           </div>
           <div>
-            <img class="mt-[170px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
+            <img class="mt-[35px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
           </div>
         </div>
     </div>      
@@ -110,7 +110,7 @@
     <!-- about -->
     <div class="px-4 pt-4">
     <div class="flex justify-center mb-4">
-      <h1 class="text-2xl text-[#4B0372]">About</h1>
+      <h1 class="text-2xl text-[#4B0372] font-bold">About</h1>
     </div>
     <div class="flex justify-center text-center">
       <p>Ada ngoding adalah layanan pembuatan website yang dibangun pada 
@@ -118,17 +118,31 @@
       </p>
     </div>
     </div>
+    <!-- Our trainer -->
+    <div class="flex flex-col mt-8">
+      <div class="flex justify-center">
+        <h1 class="text-2xl text-[#4B0372] font-bold">Our Trainer</h1>
+      </div>
+      <div>
+        <div class="flex justify-center mt-6">
+          <img src="./assets/frame2.png" class="" alt="">
+        </div>
+        <div class="flex justify-center">
+          <h2 class="font-semibold text-xl">CEO</h2>
+        </div>
+      </div>   
+    </div>
     <!-- Contact Me -->
     <div class="flex flex-col mt-8">
       <div>
         <div class="flex justify-center">
-          <h1 class="text-2xl text-[#4B0372]">Contact Me</h1>
+          <h1 class="text-2xl text-[#4B0372] font-bold">Contact Me</h1>
         </div>
         <div class="flex justify-center mb-4">
           <p>If you want to be a patner, please fill this form :</p>
         </div>
         <div class="flex justify-center items-center">
-            <div class="w-[50%] md:ml-[50px]">
+            <div class="w-[50%] md:ml-[10px]">
                 <form action="" class="font-['poppins'] text-[#BF56D8] font-extrabold md:text-xl" >Nama :</form>
                 <input type="text" class="md:w-[803px] rounded-lg">
                 <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3">Email :</form>
