--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
       </div>
       <div>
         <div class="flex justify-center mt-6">
-          <img src="./assets/frame2.png" class="" alt="">
+          <img src="/assets/Frame2.png" class="" alt="">
+        </div>
+        <div class="flex justify-center">
+          <h2>Muhamad Ilham Mubarrok</h2><br>
         </div>
         <div class="flex justify-center">
           <h2 class="font-semibold text-xl">CEO</h2>
