--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
             </div>  
           </div>
           <div>
-            <img class="mt-[35px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
+            <img class="hidden md:block mt-[35px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
           </div>
         </div>
     </div>      
     <!-- hero content end -->
     <!-- about -->
     <div class="px-4 pt-4">
-    <div class="flex justify-center mb-4">
+    <div class="flex justify-center mb-4 mt-8">
       <h1 class="text-2xl text-[#4B0372] font-bold">About</h1>
     </div>
     <div class="flex justify-center text-center">
@@ -125,7 +125,7 @@
       </div>
       <div>
         <div class="flex justify-center mt-6">
-          <img src="/assets/Frame2.png" class="" alt="">
+          <img src="./assets/Frame2.png" class="" alt="">
         </div>
         <div class="flex justify-center">
           <h2>Muhamad Ilham Mubarrok</h2><br>
