--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>  
           </div>
           <div>
-            <img class="hidden md:block mt-[35px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
+            <img class=" mt-[35px] md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
           </div>
         </div>
     </div>      
