--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
     <link rel="stylesheet" href="./src/input.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
     <!-- hero content -->
@@ -15,12 +16,12 @@
       <!-- navbar start -->
       <!-- nav dekstop -->
       <div class="flex md:justify-between">
-          <div class="flex items-center pl-8 hidden md:block">
-            <h1 class="md:text-2xl text-m mt-[40px]">Ada <span class="text-[#4B0372]">Ngoding</span></h1>
+          <div class="pl-8 hidden md:block mt-6">
+            <img src="./assets/logo2.png" alt="">
           </div>
           <div class="hidden md:block">
             <nav>
-              <ul class="flex flex-row py-4 px-8 rounded-l-full bg-[#0E0B16] mt-8 ">
+              <ul class="flex flex-row py-4 px-8 rounded-l-full bg-[#7B87C6] mt-8 ">
                 <li class="flex items-center mr-8 text-white"><a href="#">Home</a></li>
                 <li class="flex items-center mr-8 text-white"><a href="#">About</a></li>
                 <li class="flex items-center mr-8 text-white"><a href="#">Contact Me</a></li>
@@ -50,47 +51,41 @@
               </ul>
             </nav>
           </div>
-          <div class="md:hidden w-[100%] px-[20px] bg-[#0E0B16] py-[14px] fixed z-50">
-            <div class="flex justify-center">
-              <h1 class="md:text-2xl text-xl mb-2">Ada <span class="text-[#4B0372]">Ngoding</span></h1>
-            </div>           
-            <form>
-                <div class="flex justify-center items-center">
-                    <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-gray-300">Your Email</label>
-                    <button id="dropdown-button" data-dropdown-toggle="dropdown" class="flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600" type="button">Menu<svg aria-hidden="true" class="ml-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></button>
-                    <div id="dropdown" class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700" data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="bottom" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(0px, 361px);">
-                        <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdown-button">
-                          <li>
-                              <button type="button" class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Home</button>
-                          </li>
-                          <li>
-                              <button type="button" class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">About</button>
-                          </li>
-                          <li>
-                              <button type="button" class="inline-flex py-2 px-4 w-full hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Contact Me</button>
-                          </li>
-                        </ul>
-                    </div>
-                    <div class="relative w-full">
-                        <input type="search" id="search-dropdown" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-r-lg border-l-gray-50 border-l-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-l-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500" placeholder="Search...." required="">
-                        <button type="submit" class="absolute top-0 right-0 p-2.5 text-sm font-medium text-white bg-pink-400 rounded-r-lg border  hover:bg-pink-700 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                            <svg aria-hidden="true" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-                            <span class="sr-only">Search</span>
-                        </button>
-                    </div>
-                </div>
-            </form>
-          </div>
+          <div class="md:hidden w-[100%] px-[20px] bg-[#7B87C6] py-[14px] fixed z-50 flex flex-row">
+            <div class="flex justify-center items-center">
+              <img class="w-[190px] ml-8" src="./assets/logo3.png" alt="">
+            </div>
+            <div class="ml-8">
+              <button id="dropdownDefault" data-dropdown-toggle="dropdown" class="ml-[170px] text-white bg-pink-400 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button"><i class='bx bx-menu'></i></button>
+              <!-- Dropdown menu -->
+              <div id="dropdown" class="hidden z-10 w-44 bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700" data-popper-reference-hidden="" data-popper-escaped="" data-popper-placement="bottom" style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate(0px, 627px);">
+                  <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefault">
+                    <li>
+                      <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Dashboard</a>
+                    </li>
+                    <li>
+                      <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Settings</a>
+                    </li>
+                    <li>
+                      <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Earnings</a>
+                    </li>
+                    <li>
+                      <a href="#" class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Sign out</a>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+          </div>      
       </div>
       <!-- navbar end -->
         <div class="flex flex-col">
           <div class="flex flex-col  md:justify-between">
             <div class="flex justify-center">
-              <img class="h-[250px] w-[250px] md:h-[500px] md:w-[500px] mt-[150px] md:mt-[0] animate-bounce md:animate-none md:mr-[-800px]" src="./assets/image1.png" alt="">
+              <img class="h-[350px] w-[350px] md:h-[600px] md:w-[600px] mt-[150px] md:mt-[0] animate-bounce md:animate-none md:mr-[-800px]" src="./assets/image1.png" alt="">
             </div>             
-              <img class="hidden md:block w-[550px] h-[400px] mt-[-450px] ml-[300px]" src="./assets/word2.png" alt="">
+            <img class="hidden md:block w-[507px] h-[150px] mt-[-450px] ml-[300px]" src="./assets/word4.png" alt="">
             <div class="flex justify-center md:hidden">
-              <img class="h-[200px] md:hidden" src="./assets/word3.png" alt="">
+            <img class="h-[90px] w-[269px] md:hidden" src="./assets/word5.png" alt="">
             </div>
             <div class="flex justify-center mt-4 md:ml-[-750px]">
               <button type="button" class="text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Contact Me</button>
@@ -101,90 +96,138 @@
               </button>
             </div>  
           </div>
-          <div>
-            <img class=" hidden md:block  md:mt-0 md:h-[200px] w-[100%]" src="./assets/vektor4.png" alt="">
-          </div>
         </div>
     </div>      
     <!-- hero content end -->
-    <!-- about -->
-    <div class="px-4 pt-4">
-    <div class="flex justify-center mb-4 mt-8">
-      <h1 class="text-2xl text-[#4B0372] font-bold">About</h1>
+    <!-- Our Service -->
+    <div class="px-4 pt-4 mt-12">
+      <div class="flex justify-center mt-8">
+        <h1 class="text-5xl text-[#4B0372] font-bold">Our <span class="text-[#910DA7]">Service</span></h1>
+      </div>
+      <p class="text-center mb-8">we creative digital solution to serve your performence</p>
+      <div class="flex flex-col md:flex-row md:justify-center mt-4">
+        <div class="flex justify-center mt-4 md:mr-6">
+          <div class="border w-[180px] h-[262px] md:h-[476px] md:w-[286px] bg-[#F0CDFF] rounded-lg">
+            <img src="./assets/developer.png" class="md:ml-4 md:mt-4 md:w-[256px] md:h-[192px]" alt="">
+            <h1 class="text-center font-extrabold text-[10px]">WEB DEVELOPMENT</h1>
+          </div>
+        </div>
+        <div class="flex justify-center mt-4 md:mr-6">
+          <div class="border w-[180px] h-[262px] md:h-[476px] md:w-[286px] bg-[#F0CDFF] rounded-lg">
+            <img class="md:ml-8 ml-7 w-[123.84px] h-[123.84ox] md:w-[225px] md:h-[225px]" src="./assets/mobile.png">
+            <h1 class="text-center font-extrabold text-[10px]">MOBILE DEVELOPMENT</h1>
+          </div>
+        </div>
+        <div class="flex justify-center mt-4">
+          <div class="border w-[180px] h-[262px] md:h-[476px] md:w-[286px] bg-[#F0CDFF] rounded-lg">
+            <img src="./assets/design.png" class="md:w-[256px] md:h-[176px] md:ml-4 mt-4" alt="">
+            <h1 class="text-center font-extrabold text-[10px]">WEB & APP DESIGN</h1>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="flex justify-center text-center">
-      <p>Ada ngoding adalah layanan pembuatan website yang dibangun pada 
-      13 oktober 2022 dibentuk oleh muhamad ilham sebagai CEO ada ngoding
-      </p>
-    </div>
-    </div>
-    <!-- Our trainer -->
-    <div class="flex flex-col mt-8">
+    <!-- why ada ngoding-->
+    <div class="w-[100%] h-[400px] bg-[#F0CDFF] mt-[100px] pt-4">
       <div class="flex justify-center">
-        <h1 class="text-2xl text-[#4B0372] font-bold">Our Trainer</h1>
+        <h1 class="font-bold text-3xl">Why Ada <span class="text-[#910DA7]">Ngoding</span></h1>
+      </div>
+      <div class="flex justify-center mt-[-30px]">
+        <img src="./assets/cooperation.png" class="w-[250px] h-[250px]" alt="">
       </div>
       <div>
-        <div class="flex justify-center mt-6">
-          <img src="./assets/Frame2.png" class="" alt="">
-        </div>
-        <div class="flex justify-center">
-          <h2>Muhamad Ilham Mubarrok</h2><br>
-        </div>
-        <div class="flex justify-center">
-          <h2 class="font-semibold text-xl">CEO</h2>
-        </div>
-      </div>   
-    </div>
-    <!-- Contact Me -->
-    <div class="flex flex-col mt-8">
-      <div>
-        <div class="flex justify-center">
-          <h1 class="text-2xl text-[#4B0372] font-bold">Contact Me</h1>
-        </div>
-        <div class="flex justify-center mb-4">
-          <p>If you want to be a patner, please fill this form :</p>
-        </div>
-        <div class="flex justify-center items-center">
-            <div class="w-[50%] md:ml-[10px]">
-                <form action="" class="font-['poppins'] text-[#BF56D8] font-extrabold md:text-xl" >Nama :</form>
-                <input type="text" class="md:w-[803px] rounded-lg">
-                <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3">Email :</form>
-                <input type="text" class="md:w-[803px] rounded-lg">
-                <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3 hidden md:block">Message :</form>
-                <textarea name="" id="" cols="105" rows="10" class="rounded-lg hidden md:block"></textarea>
-                <form action="" class="font-[poppins] text-[#BF56D8] font-extrabold md:text-xl mt-3 md:hidden">Message :</form>
-                <textarea name="" id="" cols="24" rows="10" class="rounded-lg md:hidden md:w-[803px]"></textarea>
-                <button type="button" class=" mt-2 text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm  px-5 py-2.5 text-center  mb-4">Learn More..</button>
-             </div>
-        </div>      
+        <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium quis provident totam fuga ipsum impedit rem temporibus aut laboriosam non qui consequatur officiis quas esse repellendus, necessitatibus repudiandae accusamus culpa?</p>
       </div>
     </div>
+    <!-- profile singkat -->
+    <div class="flex flex-col mt-8 px-[10px]">
+      <div class="flex justify-center">
+        <img src="./assets/Frame2.png" class="h-[100px] w-[100px]" alt="">
+      </div>
+      <p class="text-center mt-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, porro aliquam aut cum sint facilis ducimus eos praesentium</p>
+      <p class="text-center font-semibold mt-3 text-lg">-Muhamad Ilham Mubarrok-</p>
+      <p class="text-center">CEO Ada Ngoding</p>
+      <div class="flex justify-center">
+        <img src="./assets/star.png" alt="">
+      </div>
+    </div>
+    <!-- Our Partners -->
+    <div class="mt-20">
+      <h1 class="text-center text-5xl font-bold">Our <span class="text-[#910DA7]">Parners</span></h1>
+      <div class="flex justify-center">
+        <img src="./assets/idn.png"  class="ml-10" alt="">
+      </div>
+    </div>
+    <!-- Contact Me and footer-->
+    <div class="foo mt-20">
+      <h1 class="text-center text-5xl font-bold mb-8">Contact <span class="text-[#910DA7]">us</span></h1>
+      <div class="flex justify-center">
+        <div class="border w-[325px] h-[910px] md:w-[1047px] md:h-[602px] bg-[#F3F3F3] rounded-[20px]">
+          <p class="md:text-3xl text-lg text-center font-thin mt-3 mx-4">will be happy to hear from you</p>
+          <div class="flex md:justify-between flex-col md:flex-row">
+            <div class="flex flex-col px-8">
+              <input type="text" class="mt-10 md:ml-8 rounded-lg w-[] md:w-[379px]" placeholder="Name">
+              <input type="text" class="mt-8 md:ml-8 rounded-lg w-[] md:w-[536px]" placeholder="E-mail">
+              <textarea name="" id="" class="mt-8 md:ml-8 rounded-lg" cols="30" rows="10" placeholder="Message"></textarea>
+              <button type="button" class="w-24 md:ml-8 mt-4 text-white bg-gradient-to-r from-purple-500 to-pink-500 hover:bg-gradient-to-l focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">submit</button>
+            </div>
+            <div>
+              <div>
+                <div class="md:pr-16 md:pt-10 pl-4 md:pl-0 mt-8 md:mt-0">
+                  <p class="md:text-[26px] text-[23px] font-thin">Address :</p> 
+                  <p class="md:text-[19px] font-thin"> Jl.Rasuna said Kp.hijrah RT.07/RW.04</p>
+                </div>
+                <div class="md:pr-16 md:pt-10 pl-4 md:pl-0 mt-8 md:mt-0">
+                  <p class="md:text-[26px] text-[23px] text-8 font-thin">Call us :</p> 
+                  <p class="md:text-[19px] font-thin">+6281389963530</p>
+                </div>
+                <div class="md:pr-16 md:pt-10 pl-4 md:pl-0 mt-8 md:mt-0">
+                  <p class="md:text-[26px] text-[23px] text-8 font-thin">Help</p> 
+                  <p class="md:text-[19px] font-thin">kagamayta721@gmail.com</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <!-- footer -->
     <footer class="footer">
       <div class="flex flex-col">
-        <div>
-          <img  class="mt-[-5px] md:w-[100%]" src="./assets/Vector5.png" alt="">
-        </div>
-        <div class="flex justify-between p-3">
+        <div class=" flex flex-col md:flex-row md:justify-between pl-8 mt-8">
           <div class="md:ml-[200px]">
-            <h1 class="text-l ">Ada <span class="text-[#4B0372]">Ngoding</span></h1>
+            <h1 class="text-3xl font-semibold ">Ada <span class="text-white">Ngoding</span></h1>
           </div>
-          <div>
+          <div class="mt-6">
             <ul>
-                <h1 class="text-lg">Navbar</h1>
-                <li class="text-[#D9D9D9]">Home</li>
-                <li class="text-[#D9D9D9]">About</li>
-                <li class="text-[#D9D9D9]">Contact Me</li>
+                <h1 class="text-[21px] font-semibold">Navbar</h1>
+                <li class="text-[#D9D9D9] text-[16px] font-thin">Our service</li>
+                <li class="text-[#D9D9D9] text-[16px] font-thin">About</li>
+                <li class="text-[#D9D9D9] text-[16px] font-thin">Our Parners</li>
+                <li class="text-[#D9D9D9] text-[16px] font-thin">Contact Me</li>
             </ul>
           </div>
-          <div class="md:mr-[300px]">
-            <h1 class="text-lg">Company</h1>
-            <p class="text-[#D9D9D9] text-sm">PT.Solusindo Informatich<br> Indonesia
+          <div class="md:mr-[300px] mt-6">
+            <h1 class="text-[21px] font-semibold">Company</h1>
+            <p class="text-[#D9D9D9] text-[16px] font-thin">PT.Solusindo Informatich<br> Indonesia
             Tangerang,<br> Indonesa</p>
           </div>
         </div>
+        <div class="flex md:justify-around flex-col md:flex-row">
+          <div class="py-8 md:mr-[200px]">
+            <p class="mx-[20px] ml-8 text-[12px]">© PT.Solusindo Informatich Indonesia 2022. All rights reserved.</p>
+          </div>
+          <div class="flex md:justify-end justify-center py-8"> 
+            <i class='bx bxl-linkedin-square text-[25px]'></i>
+            <i class='bx bxl-facebook text-[25px] ml-2'></i>
+            <i class='bx bxl-instagram text-[25px] ml-2' ></i>
+            <i class='bx bxl-github text-[25px] ml-2'></i>
+          </div>
+        </div>
+        <div>
+
+        </div>
       </div>
     </footer>
+  </div>
     <!-- script -->
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
   </body>
